# endoscopy-specular

./: LICENSE  README.md  pyproject.toml
src/endoscopy_specular/: __init__.py  core.py
src/endoscopy_specular.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_core.py
